letter-spacing fix

--- a/modules/blocks/about/about.scss
+++ b/modules/blocks/about/about.scss
@@ -13,6 +13,7 @@
         font-weight: $regularFontWeight;
         font-size: $h3FontSizeDT;
         line-height: $h3LineHeightDT;
+        letter-spacing: 2px;
     }
     &__list{
         text-transform: capitalize;
