--- a/modules/blocks/footer/footer.scss
+++ b/modules/blocks/footer/footer.scss
@@ -25,6 +25,7 @@
         font-weight: $regularFontWeight;
         font-size: 13px;
         line-height: $lineHeightEqualsFontSize;
+        letter-spacing: 1px;
     }
 }
 
