--- a/modules/blocks/header/header.scss
+++ b/modules/blocks/header/header.scss
@@ -22,6 +22,7 @@
         font-size: $headerLinkFontSizeDT;
         line-height: $headerLinkLineHeight;
         transition: $linkHoverTransition;
+        letter-spacing: 1px;
     }
     &__link:hover{
         opacity: $hoverOpacity;
